@@ -1,8 +1,8 @@
-![Version](https://img.shields.io/badge/version-1.0.35-green.svg)
+![Version](https://img.shields.io/badge/version-1.0.38-green.svg)
 [![CircleCI](https://circleci.com/gh/lumigo-io/java-tracer.svg?style=svg&circle-token=f2e3400e6e79bc31daeee1fc614ecc0a149b1905)](https://circleci.com/gh/lumigo-io/java-tracer)
 [![codecov](https://codecov.io/gh/lumigo-io/java-tracer/branch/master/graph/badge.svg?token=D3IZ5hQwaQ)](https://codecov.io/gh/lumigo-io/java-tracer)
 
-Supported Runtimes: Java 8
+Supported Runtimes: Java 8, Java 11
 
 # Building With Lumigo
 ## Maven
@@ -10,8 +10,8 @@ Include lumigo java tracer dependency, for [Maven](https://maven.apache.org) pro
 ```xml
 <repositories>
     <repository>
-        <id>nuiton</id>
-        <url>http://maven.nuiton.org/release/</url>
+        <id>lumigo</id>
+        <url>https://raw.githubusercontent.com/lumigo-io/java-tracer/master/local-repository/</url>
     </repository>
 </repositories>
 ```
@@ -20,13 +20,13 @@ Include lumigo java tracer dependency, for [Maven](https://maven.apache.org) pro
 <dependency>
   <groupId>io.lumigo</groupId>
   <artifactId>java-tracer</artifactId>
-  <version>{version}</version>
+  <version>1.0.38</version>
 </dependency>
 
 <dependency>
   <groupId>io.lumigo</groupId>
   <artifactId>lumigo-agent</artifactId>
-  <version>{version}</version>
+  <version>1.0.38</version>
 </dependency>
 ```
 Find the latest version here (the format of the version will be n.n.n):
@@ -87,4 +87,7 @@ class MyFunction implements RequestHandler<String, String> {
     }
 ```
 
+## Java 11 Support
+Add the environment variable `JAVA_TOOL_OPTIONS` to your Lambda functions and set it to
+`-Djdk.attach.allowAttachSelf=true` in addition to the manual code mentioned above.
 
